; ModuleID = '/home/carl/AnghaBench/git/extr_grep.c_match_expr.c'
source_filename = "/home/carl/AnghaBench/git/extr_grep.c_match_expr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.grep_opt = type { %struct.grep_expr* }
%struct.grep_expr = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.grep_opt*, i8*, i8*, i32, i32*, i32*, i32)* @match_expr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @match_expr(%struct.grep_opt* %0, i8* %1, i8* %2, i32 %3, i32* %4, i32* %5, i32 %6) #0 {
  %8 = alloca %struct.grep_opt*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  %15 = alloca %struct.grep_expr*, align 8
  store %struct.grep_opt* %0, %struct.grep_opt** %8, align 8
  store i8* %1, i8** %9, align 8
  store i8* %2, i8** %10, align 8
  store i32 %3, i32* %11, align 4
  store i32* %4, i32** %12, align 8
  store i32* %5, i32** %13, align 8
  store i32 %6, i32* %14, align 4
  %16 = load %struct.grep_opt*, %struct.grep_opt** %8, align 8
  %17 = getelementptr inbounds %struct.grep_opt, %struct.grep_opt* %16, i32 0, i32 0
  %18 = load %struct.grep_expr*, %struct.grep_expr** %17, align 8
  store %struct.grep_expr* %18, %struct.grep_expr** %15, align 8
  %19 = load %struct.grep_opt*, %struct.grep_opt** %8, align 8
  %20 = load %struct.grep_expr*, %struct.grep_expr** %15, align 8
  %21 = load i8*, i8** %9, align 8
  %22 = load i8*, i8** %10, align 8
  %23 = load i32, i32* %11, align 4
  %24 = load i32*, i32** %12, align 8
  %25 = load i32*, i32** %13, align 8
  %26 = load i32, i32* %14, align 4
  %27 = call i32 @match_expr_eval(%struct.grep_opt* %19, %struct.grep_expr* %20, i8* %21, i8* %22, i32 %23, i32* %24, i32* %25, i32 %26)
  ret i32 %27
}

declare dso_local i32 @match_expr_eval(%struct.grep_opt*, %struct.grep_expr*, i8*, i8*, i32, i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
